@@ -2315,6 +2315,7 @@ You can change this page's protection level, but it will not affect the cascadin
 'protect-level-sysop'         => 'Sysops only',
 'protect-summary-cascade'     => 'cascading',
 'protect-expiring'            => 'expires $1 (UTC)',
+'protect-expiry-indefinite' => 'indefinite',
 'protect-cascade'             => 'Protect pages included in this page (cascading protection)',
 'protect-cantedit'            => 'You cannot change the protection levels of this page, because you do not have permission to edit it.',
 'protect-othertime'           => 'Other time:',
